# Banking-System

./: CMakeLists.txt  Makefile  README.md  accounts.txt
include/: account.h
src/: account.c  main.c
